# joyit-car

./: README.md
src/JoyItCar/: .gitignore  CMakeLists.txt  README.md  app_manifest.json  azure_iot_client.c  azure_iot_client.h  ble_commands.c  ble_commands.h  button_behavior.c  button_behavior.h  i2c_motor_driver.c  i2c_motor_driver.h  main.c  utils.c  utils.h
src/JoyItCar/HardwareDefinitions/avnet_mt3620_sk/: joyitcar_appliance.json
src/JoyItCar/HardwareDefinitions/avnet_mt3620_sk/inc/hw/: joyitcar_appliance.h
src/JoyItCar/libs/ble4_click/: ble4.c  ble4.h
src/function/: Program.cs  function.csproj  joyit-car-facade.cs
src/function/Intents/GoogleDialogFlow/: Device.cs  GoogleDialogFlowRequest.cs  GoogleDialogFlowResponse.cs  IResponseContent.cs  Intent.cs  ListResponseContent.cs  Prompt.cs  Scene.cs  Session.cs  TypeOverride.cs
src/function/Services/: VehicleService.cs
